# libringbuffer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: pipeline.yml
include/: ringbuffer.hpp  ringbuffer_interface.h  ringqueue.hpp  ringqueue_interface.h
lib/: LibRingQueue.hs  ringqueue_interface.hs
src/: main.c  ringbuffer_interface.cpp
